# ArborX

./: CMakeLists.txt
.github/workflows/: windows.yml
examples/: CMakeLists.txt
examples/moving_least_squares/: CMakeLists.txt  distributed_moving_least_squares.cpp  main.py  moving_least_squares.cpp
src/: I_also_made_this_file_to_check_if_it_could_happen_on_files_in_the_source_folder_but_I_need_to_expand_it.hpp
src/interpolation/: ArborX_Interp.hpp  ArborX_InterpDistributedMovingLeastSquares.hpp  ArborX_InterpMovingLeastSquares.hpp
src/interpolation/details/: ArborX_InterpDetailsDistributedTreePostQueryComms.hpp  ArborX_InterpDetailsDistributedValuesDistributor.hpp  ArborX_InterpDetailsMovingLeastSquaresCoefficients.hpp  ArborX_InterpDetailsMovingLeastSquaresPredicates.hpp  ArborX_InterpDetailsSymmetricPseudoInverseSVD.hpp
test/: CMakeLists.txt  tstInterpDetailsDTPQC.cpp  tstInterpDetailsMLSC.cpp  tstInterpDetailsSVD.cpp  tstInterpDistributedMovingLeastSquares.cpp
test/headers_self_contained/: CMakeLists.txt
